- добавлена возможность запускать (пока не вертеть вертеть) анимацию в окне просмотра libgdx
Что необходимо доделать:
- добавить возможность масштабировать в свинговом окошке анимацию
- для any state сделать пустой инспектор и модель
- пофиксать багу при выборе и перемещении нескольких нод

- развести поддержку плагинов. 1 плагин - 1 вкладка редактора. сейчас все в кучу и падает
- в редакторе нету поддержки иерархического конечного автомата (subfsm)